--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "images": "^3.2.4",
     "jimp": "^0.22.7",
     "react": "^18.2.0",
