--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.0",
     "axios": "^1.3.4",
+    "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
     "images": "^3.2.4",
     "jimp": "^0.22.7",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-simple-draggable": "^1.0.1",
+    "styled-components": "^5.3.11",
     "umi-request": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
