--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-konva": "^18.2.5",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-simple-draggable": "^1.0.1",
