--- a/package.json
+++ b/package.json
@@ -1,58 +1,59 @@
 {
-  "name": "app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^5.0.1",
-    "@ant-design/pro-components": "^2.4.0",
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/sortable": "^7.0.2",
-    "@dnd-kit/utilities": "^3.2.1",
-    "@emotion/css": "^11.10.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.3.0",
-    "axios": "^1.3.4",
-    "file-saver": "^2.0.5",
-    "http-proxy-middleware": "^2.0.6",
-    "images": "^3.2.4",
-    "jimp": "^0.22.7",
-    "qs": "^6.11.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-konva": "^18.2.5",
-    "react-player": "^2.12.0",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "react-simple-draggable": "^1.0.1",
-    "styled-components": "^5.3.11",
-    "umi-request": "^1.4.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "app",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "./",
+    "dependencies": {
+        "@ant-design/icons": "^5.0.1",
+        "@ant-design/pro-components": "^2.4.0",
+        "@dnd-kit/core": "^6.0.8",
+        "@dnd-kit/sortable": "^7.0.2",
+        "@dnd-kit/utilities": "^3.2.1",
+        "@emotion/css": "^11.10.6",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "antd": "^5.3.0",
+        "axios": "^1.3.4",
+        "file-saver": "^2.0.5",
+        "http-proxy-middleware": "^2.0.6",
+        "images": "^3.2.4",
+        "jimp": "^0.22.7",
+        "qs": "^6.11.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-infinite-scroll-component": "^6.1.0",
+        "react-konva": "^18.2.5",
+        "react-player": "^2.12.0",
+        "react-router-dom": "^6.9.0",
+        "react-scripts": "5.0.1",
+        "react-simple-draggable": "^1.0.1",
+        "styled-components": "^5.3.11",
+        "umi-request": "^1.4.0",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
