--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-proxy-middleware": "^2.0.6",
     "images": "^3.2.4",
     "jimp": "^0.22.7",
+    "jszip": "^3.10.1",
     "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
     "react-simple-draggable": "^1.0.1",
     "styled-components": "^5.3.11",
     "umi-request": "^1.4.0",
+    "use-image": "^1.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
